# ObjectOrientedProgramming-Apps

./: .gitignore  README.md
a2-3-ElizaLuchian/: CMakeLists.txt
a2-3-ElizaLuchian/src/: main.c
a2-3-ElizaLuchian/src/controller/: Controller.c  Controller.h
a2-3-ElizaLuchian/src/domain/: Date.c  Date.h  DynamicArray.c  DynamicArray.h  Material.c  Material.h  Operation.c  Operation.h
a2-3-ElizaLuchian/src/repository/: MaterialRepo.c  MaterialRepo.h
a2-3-ElizaLuchian/src/tests/: Tests.c  Tests.h
a2-3-ElizaLuchian/src/ui/: Ui.c  Ui.h
oop-a4-5-ElizaLuchian/: CMakeLists.txt  Tests.cpp  main.cpp
oop-a4-5-ElizaLuchian/Controller/: Controller.cpp  Controller.h
oop-a4-5-ElizaLuchian/Domain/: DynamicArray.h  Event.cpp  Event.h
oop-a4-5-ElizaLuchian/Repo/: AdminRepo.cpp  AdminRepo.h  UserRepo.cpp  UserRepo.h
oop-a4-5-ElizaLuchian/Ui/: ui.cpp  ui.h
oop-a6-7-ElizaLuchian/: .qmake.stash  CMakeLists.txt  Document.sdr  Makefile  Makefile.Debug  Makefile.Release  oop-a6-7-ElizaLuchian.pro
oop-a6-7-ElizaLuchian/debug/: object_script.oop-a6-7-ElizaLuchian.Debug
oop-a6-7-ElizaLuchian/release/: object_script.oop-a6-7-ElizaLuchian.Release
oop-t2-ElizaLuchian/: CMakeLists.txt  Controller.cpp  Controller.h  HospitalDepartment.cpp  HospitalDepartment.h  NeonatalUnit.cpp  NeonatalUnit.h  Surgery.cpp  Surgery.h  Ui.cpp  Ui.h  main.cpp
oop-t2-ElizaLuchian/Exceptions/: AlreadyExistsException.cpp  AlreadyExistsException.h
t1-ElizaLuchian-1/: CMakeLists.txt  main.cpp
t1-ElizaLuchian-1/Controller/: Controller.cpp  Controller.h
t1-ElizaLuchian-1/Domain/: Struct.h  Task.cpp  Task.h
t1-ElizaLuchian-1/Repository/: Repo.cpp  Repo.h
t1-ElizaLuchian-1/Tests/: Test.cpp  Test.h
t1-ElizaLuchian-1/Ui/: Ui.cpp  Ui.h
testQt/: CMakeLists.txt  Service.cpp  Service.h  TimeInterval.cpp  TimeInterval.h  gui.cpp  gui.h  gui.ui
